<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cookie Clicker</string>
    <string name="navBar">Retourner à l\'accueil</string>
    <string name="welcome">Bienvenue</string>
    <string name="playBtn">Jouer</string>
    <string name="accountBtn">Mon Compte</string>

    <string name="loginBtn">Se Connecter</string>
    <string name="logoutBtn">Se Déconnecter</string>
    <string name="registerBtn">S\'inscrire</string>

    <string name="registerTitle">Créer un compte</string>
    <string name="usernameTitle">Veuillez saisir un nom d\'utilisateur</string>
    <string name="emailTitle">Veuillez saisir un e-mail</string>
    <string name="passwordTitle">Veuillez saisir un mot de passe</string>
    <string name="avatarTitle">Veuillez choisir un avatar</string>
    <string name="username">nom d\'utilisateur</string>
    <string name="email">e-mail</string>
    <string name="password">mot de passe</string>
    <string name="cookies">Cookies</string>
    <string name="avatar">Avatar</string>
    <string name="chooseBtn">Documents</string>
    <string name="cameraBtn">Camera</string>

    <string name="usernameToast">nom d\'utilisateur invalide</string>
    <string name="emailToast">e-mail invalide</string>
    <string name="passwordToast">mot de passe invalide</string>
    <string name="avatarToast">avatar invalide</string>
    <string name="registerToast">Compte créé avec succès</string>
    <string name="loginToast">Connexion réussie</string>
    <string name="updateToast">Compte modifié avec succès</string>

    <string name="loginTitle">Se connecter</string>
    <string name="loginEmail">Veuillez saisir votre e-mail</string>
    <string name="loginPassword">Veuillez saisir votre mot de passe</string>

    <string name="accountShowTitle">Mon Compte</string>
    <string name="accountUpdateBtn">Modifier</string>

    <string name="updateTitle">Modifier mon compte</string>
    <string name="updateUsername">Modifier votre nom d\'utilisateur</string>
    <string name="updateEmail">Modifier votre e-mail</string>
    <string name="updatePassword">Modifier votre mot de passe</string>
    <string name="updateAvatar">Modifier votre avatar</string>
    <string name="saveBtn">Enregistrer</string>

    <string name="cookieCount">Cookies : 0</string>
    <string name="upgradesBtn">Améliorations</string>
    <string name="title_activity_upgrades">améliorations</string>

    <string name="upgradesTitle">Améliorations</string>
    <string name="cookieBooster">Booster de Cookies nv. 1</string>
    <string name="alertMessage">Vous devez atteindre 30 cookies pour utiliser cette amélioration</string>
</resources>