<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/titre"
            android:text="@string/registerTitle" />

        <TextView
            style="@style/formText"
            android:text="@string/usernameTitle" />

        <EditText
            android:id="@+id/username"
            style="@style/edit"
            android:hint="@string/username" />

        <TextView
            style="@style/formText"
            android:text="@string/emailTitle" />

        <EditText
            android:id="@+id/email"
            style="@style/edit"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/formText"
            android:text="@string/passwordTitle" />

        <EditText
            android:id="@+id/password"
            style="@style/edit"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            style="@style/formText"
            android:layout_span="2"
            android:text="@string/avatarTitle" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatarImg"
                style="@style/chooseImg" />

            <Button
                android:id="@+id/avatarBtn"
                android:layout_gravity="center_vertical"
                android:text="@string/chooseBtn" />

            <Button
                android:id="@+id/avatarBtnCamera"
                style="@style/avatarBtnCamera"
                android:text="@string/cameraBtn" />
        </TableRow>

        <Button
            android:id="@+id/registerBtn"
            style="@style/button"
            android:text="@string/registerBtn" />

    </LinearLayout>

</ScrollView>