<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account_update">

    <TextView
        style="@style/titre"
        android:text="@string/updateTitle" />

    <TextView
        style="@style/formText"
        android:text="@string/updateUsername" />

    <EditText
        android:id="@+id/username"
        style="@style/edit"
        android:hint="@string/username" />

    <TextView
        style="@style/formText"
        android:text="@string/updateEmail" />

    <EditText
        android:id="@+id/email"
        style="@style/edit"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/formText"
        android:text="@string/updatePassword" />

    <EditText
        android:id="@+id/password"
        style="@style/edit"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        style="@style/formText"
        android:layout_span="2"
        android:text="@string/updateCookie" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cookieImg"
            style="@style/chooseImg"
            android:src="@drawable/circle" />

        <Button
            android:id="@+id/cookieBtn"
            android:layout_gravity="center_vertical"
            android:text="@string/chooseBtn" />
    </TableRow>

    <TextView
        style="@style/formText"
        android:layout_span="2"
        android:text="@string/updateAvatar" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatarImg"
            style="@style/chooseImg"
            android:src="@drawable/circle" />

        <Button
            android:id="@+id/avatarBtn"
            android:layout_gravity="center_vertical"
            android:text="@string/chooseBtn" />
    </TableRow>

    <Button
        android:id="@+id/saveBtn"
        style="@style/button"
        android:text="@string/saveBtn" />

</LinearLayout>