<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/titre"
            android:text="@string/loginTitle" />

        <TextView
            style="@style/formText"
            android:text="@string/loginEmail" />

        <EditText
            android:id="@+id/email"
            style="@style/edit"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/formText"
            android:text="@string/loginPassword" />

        <EditText
            android:id="@+id/password"
            style="@style/edit"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/button"
            android:text="@string/loginBtn" />

    </LinearLayout>

</ScrollView>