<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/titre"
            android:text="@string/welcome" />

        <Button
            android:id="@+id/playBtn"
            style="@style/button"
            android:text="@string/playBtn" />

        <Button
            android:id="@+id/accountBtn"
            style="@style/button"
            android:text="@string/accountBtn" />

        <Button
            android:id="@+id/decoBtn"
            style="@style/button"
            android:text="@string/logoutBtn" />

    </LinearLayout>

</ScrollView>
